hyprland: change reload and gaming mode binds around since manual reloading is now requared

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -479,9 +479,10 @@ bind = $mainMod&Shift, c, exec,grim -g "$(slurp -d)"
 bind = $mainMod&Alt, c, exec, ripdragShots $grimscreenshotdir
 
 # Gaming script and reset bind
-bind = $mainMod&control,1, exec, ~/.config/hypr/gamemode.sh
-bind = $mainMod&control,2, exec, hyprctl reload;pkill waybar;hyprctl dispatch exec waybar 
-bind = $mainMod&control,3, exec, pkill waybar 
+bind = $mainMod&control,1, exec, hyprctl reload;notify-send "reload complete!" 
+bind = $mainMod&control,2, exec, ~/.config/hypr/gamemode.sh
+bind = $mainMod&control,3, exec, hyprctl reload;pkill waybar;hyprctl dispatch exec waybar 
+bind = $mainMod&control,4, exec, pkill waybar 
 
 # screen lock
 bind = $mainMod, BackSpace, exec, ~/.config/hypr/hyprland_lock.sh
