hyprland: move xclip share bind to mod+shift+v as to not confict with ncpamixer bind

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -467,7 +467,7 @@ bind = $mainMod&Shift, o, exec, untagall.py overlay
 # Show title and class of window to make things simple
 bind = $mainMod, p, exec, notify-send "$(hyprctl activewindow | grep -E "class|title" | cut -c 2-)"
 
-bind = $mainMod, v, exec, echo -n "$(wl-paste -n)" | xclip -selection clipboard && notify-send "xclip updated"
+bind = $mainMod&Shift, v, exec, echo -n "$(wl-paste -n)" | xclip -selection clipboard && notify-send "xclip updated"
 
 # Add hyprfreeze.py bind a bind which freezes the activewindow
 bind = $mainMod&Control, p, exec, notify-send "$(hyprfreeze.py)"
