ncpamixer: add alternet f1,f2,f3 etc binds following shift-1,shift-2,shift-3 etc format

--- a/ncpamixer.conf
+++ b/ncpamixer.conf
@@ -72,6 +72,11 @@
    "keycode.339"  = "page_down"       # page down
    "keycode.76"   = "tab_next"        # L
    "keycode.72"   = "tab_prev"        # H
+   "keycode.33"  = "tab_playback"    # shift 1
+   "keycode.64"  = "tab_recording"   # shift 2
+   "keycode.35"  = "tab_output"      # shift 3
+   "keycode.36"  = "tab_input"       # shift 4
+   "keycode.37"  = "tab_config"      # shift 5
    "keycode.265"  = "tab_playback"    # f1
    "keycode.266"  = "tab_recording"   # f2
    "keycode.267"  = "tab_output"      # f3
