hyprland: add xfixauto script

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -93,6 +93,7 @@ $menu = fuzzel --icon-theme=$iconTheme
 exec-once = nm-applet
 exec-once = ~/.config/gentoo_only/init
 
+exec-once = xfixauto # script that fixes some games going black on workspace switch.
 
 exec-once = solaar --window=hide # start solaar to fix mouse to disable Horizontal Scrolling
 exec-once = ydotoold # start ydotoold for solaar to do for mouse rebinding
