hyprland: add bind for fixing weird distortion that can happen sometimes when a game is unrendered

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -352,6 +352,9 @@ bind = $mainMod, S, togglefloating,
 bind = $mainMod, E, exec, $browser
 
 bind=$mainMod,F,fullscreen
+bind=$mainMod&alt,F,forcerendererreload
+bind=$mainMod&shift,F,exec, hyprctl --batch "dispatch setfloating ; dispatch fullscreen" # fixes weird distortion that can happen sometimes when a game is unrendered
+
 
 bind=$mainMod,z,pin,active
 
