hyprland: fix overlay window rule

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -565,7 +565,7 @@ windowrulev2 = opacity 0.5, tag:overlay
 windowrulev2 = norounding, tag:overlay
 windowrulev2 = noborder, tag:overlay
 windowrulev2 = noblur, tag:overlay
-windowrulev2 = nofocus on, tag:overlay
+windowrulev2 = nofocus 1, tag:overlay
 
 # floating portal windows
 windowrulev2 = float, class:(hyprland-share-picker)
