hyprland: move grim wl-copy back to mod+alt, and comment out ripdragShots for now

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -478,9 +478,9 @@ bind = $mainMod&Control, p, exec, notify-send "$(hyprfreeze.py)"
 
 # Screenshot binds
 bind = $mainMod, c, exec, grim
-bind = $mainMod&Control&Shift, c, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = $mainMod&alt, c, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = $mainMod&Shift, c, exec,grim -g "$(slurp -d)"
-bind = $mainMod&Alt, c, exec, ripdragShots $grimscreenshotdir
+#bind = $mainMod&alt, c, exec, ripdragShots $grimscreenshotdir
 
 # Gaming script and reset bind
 bind = $mainMod&control,1, exec, hyprctl reload;notify-send "reload complete!" 
