hyprland: add a bunch of commented out config stuff

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -386,6 +386,12 @@ bind = $mainMod&Shift, j, movewindow,d
 bind = $mainMod&Shift, k, movewindow,u
 bind = $mainMod&Shift, l, movewindow,r
 
+
+#binde = $mainMod&Shift&Control, l, resizewindowpixel, 10  0,activewindow
+#binde = $mainMod&Shift&Control, j, resizewindowpixel, 0 10,activewindow
+#binde = $mainMod&Shift&Control, h, resizewindowpixel, 0 -10,activewindow
+#binde = $mainMod&Shift&Control, k, resizewindowpixel, -10 0,activewindow  
+
 binde = $mainMod&Shift&Control, h, resizeactive, 0 -10
 binde = $mainMod&Shift&Control, j, resizeactive, 0 10
 binde = $mainMod&Shift&Control, k, resizeactive, -10 0 
@@ -400,6 +406,7 @@ binde = $mainMod&Shift&alt, l, moveactive, 10 0
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
+#bind = $mainMod, 3, exec, notify-send "$(hyprctl activewindow )"
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
@@ -467,6 +474,7 @@ binde = $mainMod, w, exec,dunstify -h string:x-dunst-stack-tag:test "time" "$(da
 # tag window as overlay
 bind = $mainMod, o, tagwindow, overlay
 bind = $mainMod&Shift, o, exec, untagall.py overlay 
+#hyprctl dispatch setprop class:.* nofocus 0
 
 # Show title and class of window to make things simple
 bind = $mainMod, p, exec, notify-send "$(hyprctl activewindow | grep -E "class|title" | cut -c 2-)"
@@ -548,6 +556,7 @@ windowrulev2 = float, class:^(steam)$, title:(Steam .*) # changed regex for v0.4
 windowrulev2 = float, class:^(steam)$, title:(F.*) # for steam friend list
 #windowrulev2 = float, class:^(steam)$, title:(Friend List) # for steam friend list
 
+
 windowrulev2 = float, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = pin, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = opacity 0.6, class:(firefox), title:(Picture-in-Picture)
@@ -590,6 +599,12 @@ workspace = special:termscratchpad, gapsin:0, gapsout:50,on-created-empty:[noblu
 workspace = special:termscratchpad_bluetuith, gapsin:0, gapsout:250,on-created-empty:[noblur]kitty -o background_opacity=0.4 -e bluetuith # --class hyprScratchpadTerminal
 workspace = special:ncpamixer, gapsin:0, gapsout:250,on-created-empty:[noblur]kitty --class "ncpamixerpad" -o background_opacity=0.4 -e ncpamixer
 
+#windowrulev2 = suppressevent maximize, class:.*
+#windowrulev2 = suppressevent fullscreen, class:.*
+
+#windowrulev2 = movetoworkspacesilent +1,workspace special:ncpamixer
+#windowrulev2 = movetoworkspacesilent +1,workspace special:ncpamixer
+#windowrulev2 = workspace 1,workspace name:ncpamixer
 
 debug:disable_logs = false
 
