hyprland: add resize submap and remove old resize related binds

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -387,15 +387,8 @@ bind = $mainMod&Shift, k, movewindow,u
 bind = $mainMod&Shift, l, movewindow,r
 
 
-#binde = $mainMod&Shift&Control, l, resizewindowpixel, 10  0,activewindow
-#binde = $mainMod&Shift&Control, j, resizewindowpixel, 0 10,activewindow
-#binde = $mainMod&Shift&Control, h, resizewindowpixel, 0 -10,activewindow
-#binde = $mainMod&Shift&Control, k, resizewindowpixel, -10 0,activewindow  
 
-binde = $mainMod&Shift&Control, h, resizeactive, 0 -10
-binde = $mainMod&Shift&Control, j, resizeactive, 0 10
-binde = $mainMod&Shift&Control, k, resizeactive, -10 0 
-binde = $mainMod&Shift&Control, l, resizeactive, 10 0
+bind = $mainMod, R, submap, resize
 
 binde = $mainMod&Shift&alt, h, moveactive, -10 0
 binde = $mainMod&Shift&alt, j, moveactive, 0 10
@@ -538,10 +531,29 @@ bindel = Alt,XF86AudioLowerVolume,workspace, e-1
 ###############
 
 # See https://wiki.hyprland.org/Configuring/Binds/#submaps 
-bind = Alt, R, submap, null  
+bind = $mainMod, n, submap, null  
 submap = null 
-bind = SUPER,n,submap, reset
+bind = $mainMod,n,submap, reset
 submap = reset
+
+submap = resize
+# sets repeatable binds for resizing the active window
+binde = , right, resizeactive, 10 0
+binde = , left, resizeactive, -10 0
+binde = , up, resizeactive, 0 -10
+binde = , down, resizeactive, 0 10
+binde = , h, resizeactive, 0 -10
+binde = , j, resizeactive, 0 10
+binde = , k, resizeactive, -10 0 
+binde = , l, resizeactive, 10 0
+
+# use reset to go back to the global submap
+bind = , escape, submap, reset
+
+# will reset the submap, which will return to the global submap
+submap = reset
+
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
