hyprland: add moveslient submap to replace mod+ control + shift workspace binds

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -422,17 +422,11 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Move active window to a workspace without switching workspaces with mainMod + ALT + [0-9]
-bind = $mainMod Control&Shift, 1, movetoworkspacesilent, 1
-bind = $mainMod Control&Shift, 2, movetoworkspacesilent, 2
-bind = $mainMod Control&Shift, 3, movetoworkspacesilent, 3
-bind = $mainMod Control&Shift, 4, movetoworkspacesilent, 4
-bind = $mainMod Control&Shift, 5, movetoworkspacesilent, 5
-bind = $mainMod Control&Shift, 6, movetoworkspacesilent, 6
-bind = $mainMod Control&Shift, 7, movetoworkspacesilent, 7
-bind = $mainMod Control&Shift, 8, movetoworkspacesilent, 8
-bind = $mainMod Control&Shift, 9, movetoworkspacesilent, 9
-bind = $mainMod Control&Shift, 0, movetoworkspacesilent, 10
+
+
+# Move active window to a workspace without switching workspaces with numkeys
+# switches back to normal submap after any key is pressed including numkey
+bind = $mainMod, m, submap, movesilent
 
 bind = $mainMod&Control, c, centerwindow
 # notifcation daemon
@@ -550,9 +544,37 @@ binde = , l, resizeactive, 10 0
 # use reset to go back to the global submap
 bind = , escape, submap, reset
 
+submap = movesilent
+
+bind = ,1,movetoworkspacesilent, 1
+bind = ,2,movetoworkspacesilent, 2
+bind = ,3,movetoworkspacesilent, 3
+bind = ,4,movetoworkspacesilent, 4
+bind = ,5,movetoworkspacesilent, 5
+bind = ,6,movetoworkspacesilent, 6
+bind = ,7,movetoworkspacesilent, 7
+bind = ,8,movetoworkspacesilent, 8
+bind = ,9,movetoworkspacesilent, 9
+bind = ,0,movetoworkspacesilent, 10
+
+
+bind = ,1,submap, reset
+bind = ,2,submap, reset
+bind = ,3,submap, reset
+bind = ,4,submap, reset
+bind = ,5,submap, reset
+bind = ,6,submap, reset
+bind = ,7,submap, reset
+bind = ,8,submap, reset
+bind = ,9,submap, reset
+bind = ,10,submap, reset
+
+
+bind = , catchall, submap, reset
+#bind = , escape, submap, reset
+
 # will reset the submap, which will return to the global submap
 submap = reset
-
 
 
 ##############################
