hypridle: fix suspend

--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,7 +1,8 @@
 general {
     ignore_dbus_inhibit = false
-    after_sleep_cmd = hyprctl dispatch dpms on
-    before_sleep_cmd = hyprctl dispatch exec "sh ~/.config/hypr/hyprland_lock.sh"
+    #after_sleep_cmd = hyprctl dispatch dpms on
+    after_sleep_cmd = pkill -x waybar;hyprctl dispatch exec waybar
+    before_sleep_cmd = hyprctl dispatch exec hyprlock 
 }
 listener {
     timeout = 330                                 # 5.5min
