--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -484,7 +484,7 @@ bind = $mainMod&control,3, exec, hyprctl reload;pkill waybar;hyprctl dispatch ex
 bind = $mainMod&control,4, exec, pkill waybar 
 
 # screen lock
-bind = $mainMod, BackSpace, exec, ~/.config/hypr/hyprland_lock.sh
+bind = $mainMod, BackSpace, exec, hyprlock
 
 
 # Laptop multimedia keys for volume and LCD brightness
