hyprland: comment out unneeded submap reset line and add comment explaining submap bind

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -387,7 +387,7 @@ bind = $mainMod&Shift, k, movewindow,u
 bind = $mainMod&Shift, l, movewindow,r
 
 
-
+# switch to reize submap
 bind = $mainMod, R, submap, resize
 
 binde = $mainMod&Shift&alt, h, moveactive, -10 0
@@ -528,7 +528,7 @@ bindel = Alt,XF86AudioLowerVolume,workspace, e-1
 bind = $mainMod, n, submap, null  
 submap = null 
 bind = $mainMod,n,submap, reset
-submap = reset
+#submap = reset
 
 submap = resize
 # sets repeatable binds for resizing the active window
