hypridle: fix suspend(again)

--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,8 +1,6 @@
 general {
     ignore_dbus_inhibit = false
-    #after_sleep_cmd = hyprctl dispatch dpms on
-    after_sleep_cmd = pkill -x waybar;hyprctl dispatch exec waybar
-    before_sleep_cmd = hyprctl dispatch exec hyprlock 
+    before_sleep_cmd = hyprlock & disown
 }
 listener {
     timeout = 330                                 # 5.5min
