hypridle disable hypridle hooks again again again again

--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,6 +1,6 @@
 general {
     ignore_dbus_inhibit = false
-    before_sleep_cmd = hyprlock & disown
+    #before_sleep_cmd = hyprlock & disown
 }
 listener {
     timeout = 330                                 # 5.5min
