hyprland: add hyprlockbind to exec-once

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -103,6 +103,7 @@ exec-once = hyprpaper
 exec-once = hypridle
 exec-once = dunst
 
+exec-once = hyprlockbind
 #exec-once = swaync
 exec-once = wl-clip-persist --clipboard both
 #exec-once = gammastep
