hyprland: add fuzzelHyprPowerMenu script to binds

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -396,7 +396,7 @@ binde = $mainMod&Shift&alt, j, moveactive, 0 10
 binde = $mainMod&Shift&alt, k, moveactive, 0 -10
 binde = $mainMod&Shift&alt, l, moveactive, 10 0 
 
-
+bind = $mainMod,u,exec,fuzzelHyprPowerMenu 
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
