hyprland&waybar: switch to using env var to set screenlocker

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -76,7 +76,8 @@ $browser = firefox
 #$menu = bemenu-run -c -l 10 -W 0.15 -B 4
 #$menu = launchscript.py #|| bemenu-run -c -l 10 -W 0.15 -B 4 -i
 $menu = fuzzel --icon-theme=$iconTheme
-
+$locker = swaylock -i ~/.config/wallpaper
+env = XDG_LOCKER,$locker # this isn't a real part of the xdg var standerd this is just here so waybar and friends know what lock program/script to use.
 
 #################
 ### AUTOSTART ###
@@ -103,7 +104,7 @@ exec-once = hyprpaper
 exec-once = hypridle
 exec-once = dunst
 
-exec-once = hyprlockbind
+exec-once = hyprlockbind $locker
 #exec-once = swaync
 exec-once = wl-clip-persist --clipboard both
 #exec-once = gammastep
@@ -485,7 +486,7 @@ bind = $mainMod&control,3, exec, hyprctl reload;pkill waybar;hyprctl dispatch ex
 bind = $mainMod&control,4, exec, pkill waybar 
 
 # screen lock
-bind = $mainMod, BackSpace, exec, hyprlock
+bind = $mainMod, BackSpace, exec, $locker
 
 
 # Laptop multimedia keys for volume and LCD brightness
