--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -166,7 +166,7 @@
     "custom/lock": {
         "format": "󰍁 ",
         "tooltip": false,
-        "on-click": "hyprlock"
+        "on-click": "$XDG_LOCKER"
     },
     "custom/reboot": {
         "format": "󰜉 ",
