hyprland: update hyprlockbind usage to support bluelightfix

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -104,7 +104,7 @@ exec-once = hyprpaper
 exec-once = hypridle
 exec-once = dunst
 
-exec-once = hyprlockbind $locker
+exec-once = hyprlockbind 1 $locker
 #exec-once = swaync
 exec-once = wl-clip-persist --clipboard both
 #exec-once = gammastep
