hyprland: add group submap

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -350,6 +350,32 @@ bind = $mainMod, d, exec, $menu
 bind = $mainMod, Q, killactive,
 bind = $mainMod, S, togglefloating,
 
+bind = $mainMod, G, submap,groupmap
+submap = groupmap
+
+bind = ,g,togglegroup
+bind = ,o,moveoutofgroup,
+# h left
+# l right
+# j down
+# k up
+bind = SHIFT,H,movewindoworgroup, l
+bind = SHIFT,L,movewindoworgroup, r
+bind = SHIFT,J,movewindoworgroup, d
+bind = SHIFT,K,movewindoworgroup, u
+
+bind = , h, movefocus, l
+bind = , j, movefocus, d
+bind = , k, movefocus, u
+bind = , l, movefocus, r 
+
+
+
+bind = , escape, submap, reset
+#bind = , catchall, submap, reset
+submap = reset
+
+
 
 bind = $mainMod, E, exec, $browser
 
