hyprland: add binds for switch active group window

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -386,6 +386,8 @@ bind=$mainMod&shift,F,exec, hyprctl --batch "dispatch setfloating ; dispatch ful
 
 bind=$mainMod,z,pin,active
 
+bind=$mainMod,Tab,changegroupactive,f
+bind=$mainModShift,Tab,changegroupactive,b
 
 #bind = $mainMod, P, pseudo, # dwindle
 #bind = $mainMod, J, togglesplit, # dwindle
