hyprland: add config for group

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -333,6 +333,14 @@ device {
     sensitivity = -0.5
 }
 
+group {
+    #auto_group = false
+    drag_into_group = 2 # setting this to 2 makes draging windows into this only work if draging into the group bar
+    groupbar {
+        font_size = 10
+        font_family = monospace 
+    }
+}
 
 ###################
 ### KEYBINDINGS ###
