hyprland: add plugin, hypr-darkwindow to set firefox to inverted when google sheets is open

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -17,6 +17,14 @@
 # hyprlock : screenlocker
 # wl-gammarelay-rs : bluelight tool of choice
 
+### PLUGINS ###
+# plugin name, plugin url
+# use case for plugin.
+#
+# invertwindow, https://github.com/micha4w/Hypr-DarkWindow
+# used to invert firefox when the window title is changed to a string that contains "google sheets"
+#
+
 
 # qt/gtk theming tools of choice 
 #
@@ -103,6 +111,7 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = hypridle
 exec-once = dunst
+exec-once = hyprpm reload -n
 
 exec-once = hyprlockbind 1 $locker
 #exec-once = swaync
@@ -663,6 +672,8 @@ windowrulev2 = renderunfocused, class:(Slay the Spire), title:(Slay the Spire) #
 windowrulev2 = renderunfocused, class:(pokemon tcg live.exe) # fix slay the spire audio stutter while in background
 
 windowrulev2 = float, class:(org.gnome.Calculator)
+
+windowrulev2 = plugin:invertwindow,title:(.*Google Sheets — Mozilla Firefox.*),class:(firefox)
 
 #############################
 ### SCRATCHPAD WORKSPACES ###
