hyprland: fix cursor setting

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -183,9 +183,9 @@ $cursorSize = 30
 # It seems to work fine so I've opted not to change it but if problems arise with theming this might be a good place to look.
 $gtkTheme = 'Arc-Dark'
 $iconTheme = 'Arc'
-$cursorTheme = 'Adwaita'
+$cursorTheme = Adwaita
 
-exec-once=hyprctl setcursor Adwaita $cursorSize
+exec-once=hyprctl setcursor $cursorTheme $cursorSize
 env = XCURSOR_THEME,$cursorTheme
 env = XCURSOR_SIZE,$cursorSize
 env = HYPRCURSOR_SIZE,$cursorSize
