mpv: add bind for showing playback bar

--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -1,2 +1,3 @@
 a     script-binding quality_menu/video_formats_toggle
 Alt+a script-binding quality_menu/audio_formats_toggle
+Space cycle pause; script-binding mfpbar/maximize
