--- a/mpv/script-opts/mdmenu.conf
+++ b/mpv/script-opts/mdmenu.conf
@@ -1,7 +1,7 @@
 # if enabled, dmenu will be embedded inside the mpv instance.
 # on older mpv versions (v0.35.0 and below) depends on
 # [xdo](https://github.com/baskerville/xdo) to get mpv's xwindow id.
-embed=yes
+embed=no
 
 # if enabled, the "current item" (e.g current chapter) will be preselected in dmenu.
 # requires [preselect](https://tools.suckless.org/dmenu/patches/preselect/)
