--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -12,29 +12,33 @@
     //    "hyprland/scratchpad",
         "custom/media"
     ],
-    "modules-center": [
-        "hyprland/window"
-    ],
+    //"modules-center": [
+    //    //"hyprland/window"
+    //    "idle_inhibitor",
+    //    "custom/wl-gammarelay-temperature", 
+    //    "pulseaudio"
+    //    //"mpris"
+    //],
     "modules-right": [
        // "mpd",
+        "tray",
         "idle_inhibitor",
         "custom/wl-gammarelay-temperature", 
-        //"custom/wl-gammarelay-brightness",
-        //"custom/wl-gammarelay-gamma",
+        ////"custom/wl-gammarelay-brightness",
+        ////"custom/wl-gammarelay-gamma",
         "pulseaudio",
-     //   "network", //unused can just use network systray applet
-        "power-profiles-daemon",
-        //"custom/mullvad",
-        //"group/mullvad",
-        "cpu",
-     //   "temperature",
-        "memory",
-        "backlight",
-        "keyboard-state",
-    //    "hyprland/language", //unused only one keyboard layout
-        "battery",
-        "battery#bat2",
-        "tray",
+     // //  "network", //unused can just use network systray applet
+        //"power-profiles-daemon",
+        ////"custom/mullvad",
+        ////"group/mullvad",
+        //"cpu",
+     // //  "temperature",
+        //"memory",
+        //"backlight",
+        //"keyboard-state",
+    //  //  "hyprland/language", //unused only one keyboard layout
+        //"battery",
+        //"battery#bat2",
         "clock",
         "group/group-power"
 
