hyprland: add bind to invert active window

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -442,6 +442,7 @@ binde = $mainMod&Shift&alt, j, moveactive, 0 10
 binde = $mainMod&Shift&alt, k, moveactive, 0 -10
 binde = $mainMod&Shift&alt, l, moveactive, 10 0 
 
+bind = $mainMod,i,invertactivewindow
 bind = $mainMod,u,exec,fuzzelHyprPowerMenu 
 
 # Switch workspaces with mainMod + [0-9]
