--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -508,7 +508,7 @@ binde = $mainMod, w, exec,dunstify -h string:x-dunst-stack-tag:test "time" "$(da
 
 # tag window as overlay
 bind = $mainMod, o, tagwindow, overlay
-bind = $mainMod&Shift, o, exec, untagall.py overlay 
+bind = $mainMod&Shift, o, exec, untagall.py -t overlay 
 #hyprctl dispatch setprop class:.* nofocus 0
 
 # Show title and class of window to make things simple
