hyprland: add escape bind to excape submap

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -619,7 +619,7 @@ bind = ,10,submap, reset
 
 
 bind = , catchall, submap, reset
-#bind = , escape, submap, reset
+bind = , escape, submap, reset
 
 # will reset the submap, which will return to the global submap
 submap = reset
