--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -683,6 +683,18 @@ workspace = special:termscratchpad, gapsin:0, gapsout:50,on-created-empty:[noblu
 workspace = special:termscratchpad_bluetuith, gapsin:0, gapsout:250,on-created-empty:[noblur]kitty -o background_opacity=0.4 -e bluetuith # --class hyprScratchpadTerminal
 workspace = special:ncpamixer, gapsin:0, gapsout:250,on-created-empty:[noblur]kitty --class "ncpamixerpad" -o background_opacity=0.4 -e ncpamixer
 
+#windowrulev2 = tag +firegroup, class:(firefox)
+#windowrulev2 = group, tag:firegroup # make firefox windows automaticly make themselfs a group
+#windowrulev2 = group lock, tag:firegroup # make the group unable to accept new windows
+#windowrulev2 = group invade, tag:firegroup
+#windowrulev2 = noanim, tag:firegroup
+
+
+#windowrulev2 = group,class:(firefox) # make firefox windows automaticly make themselfs a group
+#windowrulev2 = group lock,class:(firefox) # make the group unable to accept new windows
+#windowrulev2 = group invade,class:(firefox) # add exception for firefox
+#windowrulev2 = group invade,class:(mpv)
+
 #windowrulev2 = suppressevent maximize, class:.*
 #windowrulev2 = suppressevent fullscreen, class:.*
 
