hyprland: add more invert window rules

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -674,7 +674,17 @@ windowrulev2 = renderunfocused, class:(pokemon tcg live.exe) # fix slay the spir
 
 windowrulev2 = float, class:(org.gnome.Calculator)
 
+#windowrulev2 = plugin:invertwindow,title:(.*Stack Overflow — Mozilla Firefox.*),class:(firefox)
+#windowrulev2 = plugin:invertwindow,title:(.*ArchWiki — Mozilla Firefox.*),class:(firefox)
+#windowrulev2 = plugin:invertwindow,title:(.* Firefox Help — Mozilla Firefox.*),class:(firefox)
+
+
+
+#windowrulev2 = plugin:invertwindow,title:(.*:: https://docs.google.com/spreadsheets/.* — Mozilla Firefox.*),class:(firefox)
+#windowrulev2 = plugin:invertwindow,title:(.*:: https://docs.google.com/spreadsheets/.* — Mozilla Firefox.*),class:(firefox)
+windowrulev2 = plugin:invertwindow,title:(.*:: https://docs.google.com/spreadsheets/.* — Mozilla Firefox.*),class:(firefox)
 windowrulev2 = plugin:invertwindow,title:(.*Google Sheets — Mozilla Firefox.*),class:(firefox)
+#windowrulev2 = plugin:invertwindow,class:(firefox)
 
 #############################
 ### SCRATCHPAD WORKSPACES ###
