hyprland: change nofocus syntax

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -656,7 +656,7 @@ windowrulev2 = opacity 0.5, tag:overlay
 windowrulev2 = norounding, tag:overlay
 windowrulev2 = noborder, tag:overlay
 windowrulev2 = noblur, tag:overlay
-windowrulev2 = nofocus 1, tag:overlay
+windowrulev2 = nofocus, tag:overlay
 
 # floating portal windows
 windowrulev2 = float, class:(hyprland-share-picker)
