hyprland: disable signal blur to try to fix xwayland jank

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -646,6 +646,9 @@ windowrulev2 = opacity 0.6, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = noborder, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = noblur, class:(windowkill) 
 
+
+windowrulev2 = noblur, class:(Signal) 
+
 windowrulev2 = float, class:(thunar), title:^(File Operation Progress)$
 
 #windowrulev2 = tag overlay, initialTitle:(Discord Popout), class:(vesktop)
