hyprland: disable two unused binds one for disabling external monitors and the other for swaync a tool i don't use

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -478,7 +478,7 @@ bind = $mainMod, m, submap, movesilent
 
 bind = $mainMod&Control, c, centerwindow
 # notifcation daemon
-bind = $mainMod&Shift, n, exec, swaync-client -t -sw
+#bind = $mainMod&Shift, n, exec, swaync-client -t -sw
 
 
 # Example special workspace (scratchpad)
@@ -496,7 +496,7 @@ bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
 # disable monitor
-bind = $mainMod, grave,exec,~/.config/hypr/monitor_disable.sh $secondmonitor
+#bind = $mainMod, grave,exec,~/.config/hypr/monitor_disable.sh $secondmonitor
 #bind = $mainMod, grave,exec,hyprctl keyword monitor "$secondmonitor , enable && sleep 1 && hyprctl reload"
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
