hyprland: add bind for hidding waybar without killing it

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -530,6 +530,7 @@ bind = $mainMod&control,1, exec, hyprctl reload;notify-send "reload complete!"
 bind = $mainMod&control,2, exec, ~/.config/hypr/gamemode.sh
 bind = $mainMod&control,3, exec, hyprctl reload;pkill waybar;hyprctl dispatch exec waybar 
 bind = $mainMod&control,4, exec, pkill waybar 
+bind = $mainMod&control,5, exec, pkill -SIGUSR1 waybar 
 
 # screen lock
 bind = $mainMod, BackSpace, exec, $locker
