--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -280,7 +280,8 @@ dwindle {
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_status = master
+    #new_status = master
+    new_status = slave
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
