hyprland: switch to hyprlock again again again again

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -84,7 +84,8 @@ $browser = firefox
 #$menu = bemenu-run -c -l 10 -W 0.15 -B 4
 #$menu = launchscript.py #|| bemenu-run -c -l 10 -W 0.15 -B 4 -i
 $menu = fuzzel --icon-theme=$iconTheme
-$locker = swaylock -i ~/.config/wallpaper
+$locker = hyprlock
+#$locker = swaylock -i ~/.config/wallpaper
 env = XDG_LOCKER,$locker # this isn't a real part of the xdg var standerd this is just here so waybar and friends know what lock program/script to use.
 
 #################
