hyprland: make mod+p print all window property's not just class and title

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -517,7 +517,8 @@ bind = $mainMod&Shift, o, exec, untagall.py -t overlay
 #hyprctl dispatch setprop class:.* nofocus 0
 
 # Show title and class of window to make things simple
-bind = $mainMod, p, exec, notify-send "$(hyprctl activewindow | grep -E "class|title" | cut -c 2-)"
+#bind = $mainMod, p, exec, notify-send "$(hyprctl activewindow | grep -E "class|title" | cut -c 2-)"
+bind = $mainMod, p, exec, notify-send "$(hyprctl activewindow )"
 
 bind = $mainMod&Shift, v, exec, echo -n "$(wl-paste -n)" | xclip -selection clipboard && notify-send "xclip updated"
 
