--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,6 +1,9 @@
 general{
     hide_cursor = true
     ignore_empty_input = true
+    #no_fade_out = true
+    #no_fade_in = true
+    immediate_render = true
 }
 background{
     monitor =
@@ -22,6 +25,7 @@ label {
     halign = center
     valign = center
 }
+
 
 # Time
 label {
