batch hyprland.conf update

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -116,7 +116,7 @@ exec-once = hypridle
 exec-once = dunst
 exec-once = hyprpm reload -n
 
-exec-once = hyprlockbind 1 $locker
+#exec-once = hyprlockbind 1 $locker
 #exec-once = swaync
 exec-once = wl-clip-persist --clipboard both
 #exec-once = gammastep
@@ -364,7 +364,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # https://wiki.hyprland.org/Configuring/Binds/ 
 # Basic binds
 
-bind = $mainMod, Escape, exit,
+bind = $mainMod&alt&control, Escape, exit,
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, d, exec, $menu
 bind = $mainMod, Q, killactive,
@@ -397,7 +397,8 @@ submap = reset
 
 
 
-bind = $mainMod, E, exec, $browser
+#bind = $mainMod, E, exec, $browser
+bind = $mainMod, E, exec, BEMOJI_PICKER_CMD="fuzzel -d" bemoji
 
 bind=$mainMod,F,fullscreen
 bind=$mainMod&alt,F,forcerendererreload
@@ -406,8 +407,8 @@ bind=$mainMod&shift,F,exec, hyprctl --batch "dispatch setfloating ; dispatch ful
 
 bind=$mainMod,z,pin,active
 
-bind=$mainMod,Tab,changegroupactive,f
-bind=$mainModShift,Tab,changegroupactive,b
+#bind=$mainMod,Tab,changegroupactive,f
+#bind=$mainModShift,Tab,changegroupactive,b
 
 #bind = $mainMod, P, pseudo, # dwindle
 #bind = $mainMod, J, togglesplit, # dwindle
@@ -445,7 +446,29 @@ binde = $mainMod&Shift&alt, j, moveactive, 0 10
 binde = $mainMod&Shift&alt, k, moveactive, 0 -10
 binde = $mainMod&Shift&alt, l, moveactive, 10 0 
 
+# plugin binds
 bind = $mainMod,i,invertactivewindow
+
+#bind = $mainMod,tab,Fullscreen,0
+#bind = $mainMod,tab,hyprexpo:expo,toggle
+
+
+plugin {
+    hyprexpo {
+        columns = 3
+        gap_size = 0 
+        bg_col = rgb(111111)
+        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
+
+        #enable_gesture = true # laptop touchpad
+        #gesture_fingers = 3  # 3 or 4
+        #gesture_distance = 300 # how far is the "max"
+        #gesture_positive = true # positive = swipe down. Negative = swipe up.
+    }
+}
+
+#bind = $mainMod,tab,exec, if [ "$(hyprctl activewindow -j | jq '.fullscreen')" != "0" ]; then hyprctl dispatch fullscreen; fi ; hyprctl dispatch hyprexpo:expo toggle
+
 bind = $mainMod,u,exec,fuzzelHyprPowerMenu 
 
 # Switch workspaces with mainMod + [0-9]
@@ -575,6 +598,9 @@ bindel = Alt,XF86AudioRaiseVolume,workspace, e+1
 bindel = Alt,XF86AudioLowerVolume,workspace, e-1 
 
 
+# if-hyprlock only runs in hyprlock is active
+bindl = , Prior, exec, if-hyprlock loginctl suspend
+
 ###############
 ### SUBMAPS ### 
 ###############
@@ -648,7 +674,7 @@ windowrulev2 = float, class:^(steam)$, title:(F.*) # for steam friend list
 
 windowrulev2 = float, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = pin, class:(firefox), title:(Picture-in-Picture)
-windowrulev2 = opacity 0.6, class:(firefox), title:(Picture-in-Picture)
+#windowrulev2 = opacity 0.6, class:(firefox), title:(Picture-in-Picture)
 #windowrulev2 = nofocus off, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = noborder, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = noblur, class:(windowkill) 
@@ -692,9 +718,11 @@ windowrulev2 = float, class:(org.gnome.Calculator)
 
 #windowrulev2 = plugin:invertwindow,title:(.*:: https://docs.google.com/spreadsheets/.* — Mozilla Firefox.*),class:(firefox)
 #windowrulev2 = plugin:invertwindow,title:(.*:: https://docs.google.com/spreadsheets/.* — Mozilla Firefox.*),class:(firefox)
-windowrulev2 = plugin:invertwindow,title:(.*:: https://docs.google.com/spreadsheets/.* — Mozilla Firefox.*),class:(firefox)
-windowrulev2 = plugin:invertwindow,title:(.*Google Sheets — Mozilla Firefox.*),class:(firefox)
+#windowrulev2 = plugin:invertwindow,title:(.*:: https://docs.google.com/spreadsheets/.* — Mozilla Firefox.*),class:(firefox)
+#windowrulev2 = plugin:invertwindow,title:(.*Google Sheets — Mozilla Firefox.*),class:(firefox)
+#windowrulev2 = plugin:invertwindow,title:(.*Google Docs — Mozilla Firefox.*),class:(firefox)
 #windowrulev2 = plugin:invertwindow,class:(firefox)
+windowrulev2 = size >30% >30%, class:Zenity
 
 #############################
 ### SCRATCHPAD WORKSPACES ###
