make if-hyprlock and prior pressed bind work correctly

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -599,7 +599,7 @@ bindel = Alt,XF86AudioLowerVolume,workspace, e-1
 
 
 # if-hyprlock only runs in hyprlock is active
-bindl = , Prior, exec, if-hyprlock loginctl suspend
+bindln = , Prior, exec, if-hyprlock loginctl suspend
 
 ###############
 ### SUBMAPS ### 
