change ranger keymaps

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -761,5 +761,7 @@ copytmap <ESC> q Q w <C-c>
 
 
 # extra goofy commands
-map rd shell ripdrag %s
+map A shell ripdrag %s
+#map rd shell ripdrag %s
 map ds shell sudo rm -ir %s
+map ea shell atool -x %s
