hyprland: fuck it

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -41,7 +41,9 @@
 
 $mainmonitor=DP-4
 #$secondmonitor=HDMI-A-1
-monitor=$mainmonitor,2560x1440@165,auto,auto #, vrr, 2
+monitor=$mainmonitor,2560x1440@165,auto,auto
+
+#, vrr, 2
 #monitor=$mainmonitor,2560x1440@164.94Hz,auto,auto, vrr, 1
 
 #monitor=$secondmonitor,1920x1080,auto-left,auto
@@ -114,7 +116,8 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = hypridle
 exec-once = dunst
-exec-once = hyprpm reload -n
+# reload is here due to hyprland bug relating to plugins
+exec-once = hyprpm reload -n && hyprctl reload
 
 #exec-once = hyprlockbind 1 $locker
 #exec-once = swaync
@@ -169,7 +172,7 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 cursor {
     #no_hardware_cursors = false # not a hard requarement for nvidia any more but reduces stutters as of version v45.
-    no_hardware_cursors = 1
+    no_hardware_cursors = 0
     use_cpu_buffer = true
 }
 
@@ -407,8 +410,8 @@ bind=$mainMod&shift,F,exec, hyprctl --batch "dispatch setfloating ; dispatch ful
 
 bind=$mainMod,z,pin,active
 
-#bind=$mainMod,Tab,changegroupactive,f
-#bind=$mainModShift,Tab,changegroupactive,b
+bind=$mainMod,Tab,changegroupactive,f
+bind=$mainModShift,Tab,changegroupactive,b
 
 #bind = $mainMod, P, pseudo, # dwindle
 #bind = $mainMod, J, togglesplit, # dwindle
@@ -514,7 +517,9 @@ bind = $mainMod&Control, c, centerwindow
 #bind = $mainMod SHIFT, j, movetoworkspace, special:magic
 
 
-bind = $mainMod, x, togglespecialworkspace, termscratchpad
+#bind = $mainMod, x, togglespecialworkspace, termscratchpad
+bind = $mainMod, x, togglespecialworkspace, scratchpad_all
+bind = $mainMod SHIFT, x, movetoworkspace, special:scratchpad_all
 bind = $mainMod, b, togglespecialworkspace, termscratchpad_bluetuith
 bind = $mainMod, v, togglespecialworkspace, ncpamixer 
 
@@ -536,6 +541,10 @@ binde = $mainMod, w, exec,dunstify -h string:x-dunst-stack-tag:test "time" "$(da
 
 # tag window as overlay
 bind = $mainMod, o, tagwindow, overlay
+bind = $mainMod&SHIFT, o, tagwindow, noborder
+windowrulev2 = noborder, tag:noborder
+
+
 bind = $mainMod&Shift, o, exec, untagall.py -t overlay 
 #hyprctl dispatch setprop class:.* nofocus 0
 
@@ -593,6 +602,9 @@ bindel = $mainMod,XF86AudioRaiseVolume, exec, busctl --user -- call rs.wl-gammar
 bindl = Control, XF86AudioMute, exec, playerctl play-pause
 bindl = Control, XF86AudioLowerVolume, exec, playerctl previous
 bindl = Control, XF86AudioRaiseVolume, exec, playerctl next
+
+# add brightness monitor control with ddcutil
+#bindl = Control, XF86AudioMute, exec,
 
 bindel = Alt,XF86AudioRaiseVolume,workspace, e+1
 bindel = Alt,XF86AudioLowerVolume,workspace, e-1 
@@ -731,6 +743,8 @@ workspace = special:termscratchpad, gapsin:0, gapsout:50,on-created-empty:[noblu
 workspace = special:termscratchpad_bluetuith, gapsin:0, gapsout:250,on-created-empty:[noblur]kitty -o background_opacity=0.4 -e bluetuith # --class hyprScratchpadTerminal
 workspace = special:ncpamixer, gapsin:0, gapsout:250,on-created-empty:[noblur]kitty --class "ncpamixerpad" -o background_opacity=0.4 -e ncpamixer
 
+workspace = special:scratchpad_all, gapsin:0,gapsout:100
+
 #windowrulev2 = tag +firegroup, class:(firefox)
 #windowrulev2 = group, tag:firegroup # make firefox windows automaticly make themselfs a group
 #windowrulev2 = group lock, tag:firegroup # make the group unable to accept new windows
@@ -749,6 +763,7 @@ workspace = special:ncpamixer, gapsin:0, gapsout:250,on-created-empty:[noblur]ki
 #windowrulev2 = movetoworkspacesilent +1,workspace special:ncpamixer
 #windowrulev2 = movetoworkspacesilent +1,workspace special:ncpamixer
 #windowrulev2 = workspace 1,workspace name:ncpamixer
+windowrulev2 = tile,title:Godot
 
 debug:disable_logs = false
 
