--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -450,7 +450,7 @@ binde = $mainMod&Shift&alt, k, moveactive, 0 -10
 binde = $mainMod&Shift&alt, l, moveactive, 10 0 
 
 # plugin binds
-bind = $mainMod,i,invertactivewindow
+#bind = $mainMod,i,invertactivewindow
 
 #bind = $mainMod,tab,Fullscreen,0
 #bind = $mainMod,tab,hyprexpo:expo,toggle
@@ -743,7 +743,7 @@ workspace = special:termscratchpad, gapsin:0, gapsout:50,on-created-empty:[noblu
 workspace = special:termscratchpad_bluetuith, gapsin:0, gapsout:250,on-created-empty:[noblur]kitty -o background_opacity=0.4 -e bluetuith # --class hyprScratchpadTerminal
 workspace = special:ncpamixer, gapsin:0, gapsout:250,on-created-empty:[noblur]kitty --class "ncpamixerpad" -o background_opacity=0.4 -e ncpamixer
 
-workspace = special:scratchpad_all, gapsin:0,gapsout:100
+workspace = special:scratchpad_all, gapsout:100
 
 #windowrulev2 = tag +firegroup, class:(firefox)
 #windowrulev2 = group, tag:firegroup # make firefox windows automaticly make themselfs a group
