hyprland: sony headphones lift feature fix

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -582,7 +582,9 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
-bindl = , XF86AudioPlay, exec, playerctl play-pause
+bindl = , XF86AudioPlay, exec, playerctl play # switched from play pause to play for sony headphones
+#bindl = , XF86AudioPlay, exec, playerctl play-pause
+bindl = , XF86AudioPause, exec, playerctl pause # added pause for sony headphones
 bindl = , XF86AudioPrev, exec, playerctl previous
 bindl = , XF86AudioNext, exec, playerctl next
 
