--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -117,7 +117,8 @@ exec-once = hyprpaper
 exec-once = hypridle
 exec-once = dunst
 # reload is here due to hyprland bug relating to plugins
-exec-once = hyprpm reload -n && hyprctl reload
+#exec-once = hyprpm reload -n 
+#&& hyprctl reload
 
 #exec-once = hyprlockbind 1 $locker
 #exec-once = swaync
