disabled firefox picture in picture ruules due to, firefox picture in picture resulting in crashes.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -687,11 +687,10 @@ windowrulev2 = float, class:^(steam)$, title:(F.*) # for steam friend list
 #windowrulev2 = float, class:^(steam)$, title:(Friend List) # for steam friend list
 
 
-windowrulev2 = float, class:(firefox), title:(Picture-in-Picture)
-windowrulev2 = pin, class:(firefox), title:(Picture-in-Picture)
-#windowrulev2 = opacity 0.6, class:(firefox), title:(Picture-in-Picture)
-#windowrulev2 = nofocus off, class:(firefox), title:(Picture-in-Picture)
-windowrulev2 = noborder, class:(firefox), title:(Picture-in-Picture)
+#windowrulev2 = float, class:(firefox), title:(Picture-in-Picture)
+#windowrulev2 = pin, class:(firefox), title:(Picture-in-Picture)
+#windowrulev2 = noborder, class:(firefox), title:(Picture-in-Picture)
+
 windowrulev2 = noblur, class:(windowkill) 
 
 
