disable godot window rule

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -765,7 +765,7 @@ workspace = special:scratchpad_all, gapsout:100
 #windowrulev2 = movetoworkspacesilent +1,workspace special:ncpamixer
 #windowrulev2 = movetoworkspacesilent +1,workspace special:ncpamixer
 #windowrulev2 = workspace 1,workspace name:ncpamixer
-windowrulev2 = tile,title:Godot
+#windowrulev2 = tile,title:Godot
 
 debug:disable_logs = false
 
